<resources>
    <string name="app_name">Cardiac Recorder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_starting">StartingActivity</string>
    <string name="date">1. Date of Measurement :</string>
    <string name="time">2. Time of measurement :</string>
    <string name="systolic">3. Systolic Pressure :</string>
    <string name="diastolic">4. Diastolic Pressure :</string>
    <string name="heart_rate">5. Heart Rate :</string>
    <string name="comment">6. Comment :</string>
</resources>