<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".ViewActivity">

    <TextView
        android:id="@+id/Header"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="50dp"
        android:text="Details :"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Header" />

    <TextView
        android:id="@+id/vDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="dd/mm/yy"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vDate" />

    <TextView
        android:id="@+id/vTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vDate" />

    <TextView
        android:id="@+id/vTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="hh:mm"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vTime" />

    <TextView
        android:id="@+id/vSystolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/systolic"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vTime" />

    <TextView
        android:id="@+id/vSystolicValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="number"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vSystolic" />

    <TextView
        android:id="@+id/vDiastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/diastolic"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vSystolic" />

    <TextView
        android:id="@+id/vDiastolicValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="number"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vDiastolic" />

    <TextView
        android:id="@+id/vHeartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/heart_rate"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vDiastolic" />

    <TextView
        android:id="@+id/vHeartRateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="number"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vHeartRate" />

    <TextView
        android:id="@+id/vComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/comment"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vHeartRate" />

    <TextView
        android:id="@+id/vCommentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:maxLines="5"
        android:text="Comment"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/vComment" />

    <FrameLayout
        android:id="@+id/backFrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/design_default_color_error"
        android:layout_marginBottom="27dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/backButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="Back"
            android:textSize="24sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>