<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".ViewActivity">

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:text="Insert Records :"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Header" />

    <EditText
        android:id="@+id/DateValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_text_field"
        android:hint="dd/mm/yy"
        android:inputType="text"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <EditText
        android:id="@+id/TimeValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_text_field"
        android:hint="hh : mm"
        android:inputType="text"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <TextView
        android:id="@+id/Systolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/systolic"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <EditText
        android:id="@+id/SystolicValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_text_field"
        android:hint="number"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Systolic" />

    <TextView
        android:id="@+id/Diastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/diastolic"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Systolic" />

    <EditText
        android:id="@+id/DiastolicValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_text_field"
        android:hint="number"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Diastolic" />

    <TextView
        android:id="@+id/HeartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/heart_rate"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Diastolic" />

    <EditText
        android:id="@+id/HeartRateValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_text_field"
        android:hint="number"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/HeartRate" />

    <TextView
        android:id="@+id/Comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/comment"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/HeartRate" />

    <EditText
        android:id="@+id/CommentValue"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_text_field"
        android:hint="Comment"
        android:inputType="textMultiLine"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Comment" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/rounded_text_field"
        android:backgroundTint="#1DF4E0"
        android:paddingLeft="40dp"
        android:paddingTop="3dp"
        android:paddingRight="40dp"
        android:paddingBottom="3dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CommentValue" />
</androidx.constraintlayout.widget.ConstraintLayout>